crates/analyzer/tests/snapshots/errors__map_no_type_arg_list.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: missing generic arguments for type `Map`
  ┌─ [snippet]:3:10
  │
3 │   let x: Map
  │          ^^^ expected 2 generic arguments
  │
  = Example: `Map<u64, String<32>>`


